--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ArtistShower</string>
     <string name="biography_string">Биография</string>
     <string name="artist_info_activity_string">Подробная информация</string>
+    <string name="main_activity_title">Исполнители</string>
 </resources>
